--- a/code/02-18_regression_partial.qmd
+++ b/code/02-18_regression_partial.qmd
@@ -39,7 +39,7 @@ Because both the response variable (i.e., corn yield) and explanatory variable (
 Anytime we have this input x output **numerical** relationship, a few different patterns can emerge.
 
 ```{r input output relationships figure, echo=F}
-knitr::include_graphics("../data/ior.png")
+#knitr::include_graphics("../data/ior.png")
 ```
 
 Talk about each of these patterns.
@@ -215,14 +215,20 @@ Solution:
 
 First, let's create an data set with all levels of seeding rate we want to get a prediction.  
 ```{r nd}
-nd <- 
+nd <- data.frame(sr_ksha = seq(40,120,1)) #from 40 to 120, sequence of 1.
 
 nd
 ```
 
 ```{r mod1 better final plot}
 # Creating predictions
-nd 
+nd <- nd %>%
+  mutate(mod1_yield_mgha = predict(mod1_int,
+                                   nd, 
+                                   re.form = NA
+                                   ))
+
+  
 # Creating function to bootstrap
 predict.fun <- function(mod) {
   predict(mod, 
@@ -254,7 +260,14 @@ ggplot(reg_dfw,
              alpha = .7)+
   geom_line(data = nd, 
             aes(y = mod1_yield_mgha), 
-            color = "forestgreen")
+            color = "forestgreen") + 
+  geom_ribbon(data = nd,
+              aes(ymin = mod1_int_lcl,
+                  ymax = mod1_int_upl,
+                  x = sr_ksha),
+              inherit.aes = FALSE,
+              alpha = .5
+              ) #idk why theres like 10 mod1s
 ```
 
 Linear thoughts:
@@ -271,7 +284,8 @@ Next, let's try a linear (intercept + slope) model.
 options(contrasts = c("contr.sum", "contr.poly"))
 
 # Model fitting
-mod2_lin 
+mod2_lin <- lmer(yield_mgha ~ (1|rep) + sr_ksha, #adding seeding rate to the model :)
+                 data = reg_dfw)
 
 # Summary
 summary(mod2_lin)
@@ -343,7 +357,9 @@ ggplot(mod2_lin_aug,
        aes(x = sr_ksha, 
            y = yield_mgha))+
   geom_point(size = 3, 
-             alpha = .7)
+             alpha = .7) + 
+  geom_line(aes(y = .fixed)) + 
+  scale_x_continuous(limits = c(0,120))
 ```
 
 Problem with the plot above:  
